plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.sopt'
version = '0.0.1'

ext {
    set('confetiApplication', 'org.sopt.confeti.ConfetiApplication')
    set('awspringVersion', '3.3.1')
}

bootRun {
    mainClass = "${confetiApplication}"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // psy
//    implementation 'p6spy:p6spy:3.9.1'
//    implementation 'com.github.gavlyukovskiy:datasource-decorator-spring-boot-autoconfigure:1.9.0'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // AWS S3
    implementation "io.awspring.cloud:spring-cloud-aws-starter:${awspringVersion}"
    implementation "io.awspring.cloud:spring-cloud-aws-starter-s3:${awspringVersion}"

    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Grafana
    runtimeOnly("io.micrometer:micrometer-registry-prometheus")

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // DB
    runtimeOnly 'com.mysql:mysql-connector-j'

    // JWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'

    // Web Client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

    // HTTP Client
    implementation 'org.apache.httpcomponents.client5:httpclient5'

    // AOP
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Elastic Search
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    // Komoran
    implementation 'com.github.shin285:KOMORAN:3.3.9'

    // Bouncy Castle
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Redis
    implementation "org.springframework.boot:spring-boot-starter-data-redis"

    // Jackson
    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // OpenFeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'io.github.openfeign:feign-okhttp:11.10'
    implementation 'io.github.openfeign:feign-jackson:11.10'

    // Slack
    implementation "com.slack.api:slack-api-client:1.45.3"

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // Spring Cloud AWS SQS Starter
    implementation "io.awspring.cloud:spring-cloud-aws-starter-sqs:${awspringVersion}"

    // Secret Manager
    implementation "io.awspring.cloud:spring-cloud-aws-starter-secrets-manager:${awspringVersion}"

    // Google Auto Service
    compileOnly 'com.google.auto.service:auto-service:1.1.1'
    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
    }
}

test {
    useJUnitPlatform()
}
